--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.33.10:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
+
     <dependencies>
 
         <dependency>
@@ -51,7 +61,7 @@
             <version>2.1.0</version>
         </dependency>
 
-
+        
 
     </dependencies>
 
