--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,31 +5,32 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=timesheet_db
+      - MYSQL_ROOT_PASSWORD=rootpassword  # Mot de passe pour MySQL
+      - MYSQL_DATABASE=db  # Nom de la base
     ports:
       - 3306:3306
     volumes:
       - db:/var/lib/mysql
+
   app-timesheet:
     depends_on:
       - mysqldb
     image: mayssarouissi798/tp-foyer:1.0.0
-    #build : ./
     restart: on-failure
     ports:
-      - 8082:8082
+      - 8089:8089  # Port ajusté pour correspondre à la config Spring Boot
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/timesheet_db?createDatabaseIfNotExist=true",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : null,
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
+        "spring.datasource.url": "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
+        "spring.datasource.username": "root",
+        "spring.datasource.password": "",
+        "spring.jpa.hibernate.ddl-auto": "update",
+        "spring.jpa.show-sql": "true",
+        "server.port": "8089",
+        "server.servlet.context-path": "/tpfoyer"
       }'
     stdin_open: true
     tty: true
 
 volumes:
-  db :
-
+  db:
