--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,31 @@
-version: "3.8"
-
 services:
   mysqldb:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=rootpassword  # Mot de passe pour MySQL
-      - MYSQL_DATABASE=db  # Nom de la base
+      MYSQL_ROOT_PASSWORD: mayssa
+      MYSQL_DATABASE: db
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - db:/var/lib/mysql
 
-  app-timesheet:
+  app-foyer:
     depends_on:
       - mysqldb
-    image: mayssarouissi798/tp-foyer:1.0.0
+    image: houas6/tp-foyer:1.0.0
     restart: on-failure
     ports:
-      - 8089:8089  # Port ajusté pour correspondre à la config Spring Boot
+      - "8089:8089"
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url": "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
-        "spring.datasource.username": "root",
-        "spring.datasource.password": "",
-        "spring.jpa.hibernate.ddl-auto": "update",
-        "spring.jpa.show-sql": "true",
-        "server.port": "8089",
-        "server.servlet.context-path": "/tpfoyer"
-      }'
-    stdin_open: true
+      SPRING_APPLICATION_JSON: >-
+        {
+          "spring.datasource.url": "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
+          "spring.datasource.username": "root",
+          "spring.datasource.password": "mayssa",
+          "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL57Dialect",
+          "spring.jpa.hibernate.ddl-auto": "update"
+        }
     tty: true
 
 volumes:
