--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,32 @@
-version: "3.8"
-
 services:
   mysqldb:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=timesheet_db
+      MYSQL_ROOT_PASSWORD: ghaith
+      MYSQL_DATABASE: db
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - db:/var/lib/mysql
-  app-timesheet:
+
+  app-foyer:
     depends_on:
       - mysqldb
     image: ghaithdhaouadi/tp-foyer:1.0.0
-    #build : ./
     restart: on-failure
     ports:
-      - 8089:8089
+      - "8089:8089"
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : null,
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
-    stdin_open: true
+      SPRING_APPLICATION_JSON: >-
+        {
+          "spring.datasource.url": "jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true",
+          "spring.datasource.username": "root",
+          "spring.datasource.password": "ghaith",
+          "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL57Dialect",
+          "spring.jpa.hibernate.ddl-auto": "update"
+        }
     tty: true
 
 volumes:
-  db :
+  db:
