--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     environment:
       SPRING_APPLICATION_JSON: >-
         {
-          "spring.datasource.url": "jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true",
+          "spring.datasource.url": "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
           "spring.datasource.username": "root",
           "spring.datasource.password": "ghaith",
           "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL57Dialect",
