--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# DB Configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+# DB Configuration :
+spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.hibernate.ddl-auto=update
 
-# Web Server (Tomcat) configuration
-server.port=${SERVER_PORT:8089}
-server.servlet.context-path=${SERVER_CONTEXT_PATH:/tpfoyer}
+# Web Server (Tomcat) configuration :
+server.port=8089
+server.servlet.context-path=/tpfoyer
