--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,14 @@ services:
     ports:
       - "8089:8089"
     environment:
-      SPRING_DATASOURCE_URL: "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true"
-      SPRING_DATASOURCE_USERNAME: "root"
-      SPRING_DATASOURCE_PASSWORD: "ghaith"
-      SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
-      SPRING_JPA_DIALECT: "org.hibernate.dialect.MySQL57Dialect"
-      SERVER_PORT: 8089
-      SERVER_CONTEXT_PATH: "/tpfoyer"
-    tty: true
+      SPRING_APPLICATION_JSON: >-
+        {
+          "spring.datasource.url": "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
+          "spring.datasource.username": "root",
+          "spring.datasource.password": "ghaith",
+          "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL57Dialect",
+          "spring.jpa.hibernate.ddl-auto": "update"
+        }
 
 volumes:
   db:
