--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysqldb:
     image: mysql:5.7
@@ -28,6 +26,7 @@ services:
           "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL57Dialect",
           "spring.jpa.hibernate.ddl-auto": "update"
         }
+    tty: true
 
 volumes:
   db:
