--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,34 @@
+version: '3.8'
+
 services:
-  mysqldb:
-    image: mysql:8.0
-    restart: unless-stopped
+  app:
+    image: ghaithdhaouadi/tp-foyer:1.0.0
+    container_name: spring
+    restart: on-failure
+    ports:
+      - "8089:8089"
+    depends_on:
+      - db
     environment:
-      MYSQL_ROOT_PASSWORD: ghaith
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/db?createDatabaseIfNotExist=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: ""
+      SPRING_JPA_SHOW_SQL: true
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SERVER_PORT: 8089
+      SERVER_SERVLET_CONTEXT_PATH: /tpfoyer
+
+  db:
+    image: mysql:8.0
+    container_name: database
+    restart: on-failure
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_DATABASE: db
     ports:
       - "3306:3306"
     volumes:
-      - db:/var/lib/mysql
-
-  app-foyer:
-    depends_on:
-      - mysqldb
-    image: ghaithdhaouadi/tp-foyer:1.0.0
-    restart: on-failure
-    ports:
-      - "8089:8089"
-    environment:
-      SPRING_APPLICATION_JSON: >-
-        {
-          "spring.datasource.url": "jdbc:mysql://mysqldb:3306/db?createDatabaseIfNotExist=true",
-          "spring.datasource.username": "root",
-          "spring.datasource.password": "ghaith",
-          "spring.jpa.properties.hibernate.dialect": "org.hibernate.dialect.MySQL57Dialect",
-          "spring.jpa.hibernate.ddl-auto": "update"
-        }
-    tty: true
+      - db_data:/var/lib/mysql
 
 volumes:
-  db:
+  db_data:
