--- a/pom.xml
+++ b/pom.xml
@@ -71,13 +71,17 @@
         </dependency>
 
     </dependencies>
-    <!-- Deploy to Nexus -->
-    <distributionManagement>
+
+     <!-- Deploy to Nexus -->
+<distributionManagement>
         <repository>
-            <id>deploymentRepo</id>
-            <name>Nexus Repository</name>
+            <id>maven-releases</id>
             <url>http://localhost:8081/repository/maven-releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <build>
