--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>tp-foyer</description>
     <properties>
         <java.version>17</java.version>
+        <springdoc.version>2.1.0</springdoc.version>
+        <hibernate.version>6.2.5.Final</hibernate.version>
     </properties>
     <dependencies>
 
