--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Web Server (Tomcat) configuration :
 server.port=8089
 server.servlet.context-path=/tpfoyer
+
+
+management.endpoints.web.exposure.include=prometheus,health,info
